added legends. update header buttons

--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
     <div class="header">
       <a class="logo" href="#"><strong>CHEAPESTORE</strong></a>
       <input class="look-for" type="text" placeholder="Look for product, brand, category...">
-      <button>Login</button>
-      <button>
-        <i class="bi bi-cart" alt="shopping-cart-logo" height="12"></i>
-      </button>
+      <button class="custom-btn">Login</button>
+      <button href="" class="btn cart-btn"><i class="bi bi-cart" alt="shopping-cart-logo"
+          ></i></button>
     </div>
     <nav>
       <ul>
@@ -57,7 +56,8 @@
         <img class="d-block w-100" src="./images/slider/slider-sale.gif" alt="">
         <div class="carousel-caption">
           <h2 class="bordered-title">WOMENS WHOLESALE FASHION</h2>
-          <p class="bordered-paragraph">Find all of our NEW stock here at Influence, all designed in-house and made in our own factories.</p>
+          <p class="bordered-paragraph">Find all of our NEW stock here at Influence, all designed in-house and made in
+            our own factories.</p>
         </div>
       </div>
       <div class="carousel-item active">
@@ -86,162 +86,162 @@
         <img class="category" src="./images/men/black-shoes.jpg" alt="black-shoes">
         <img class="category" src="./images/women/faux-fur-scarf.jpg" alt="faux-fur-scarf">
       </section>
-      <div>
+      <section class="legend">
         <h2 class="title">FALL INTO THE NEW</h2>
-        <p>It's everybody's favorite season for stepping out in amazing fits-pretty statement sweaters, sexy denim and
-          all the cute shoes and boots. So go ahead-fall in!</p>
-      </div>
-      <section class="top-offers col-12">
-        <h2 class="title">TOP OFFERS!</h2>
+        <p class="paragraph">It's everybody's favorite season for stepping out in <strong>amazing</strong> fits-pretty
+          statement sweaters, <strong>sexy</strong> denim and
+          all the cute shoes and boots.</p>
+        <p class="paragraph"><strong>So go ahead-fall in!</strong></p>
+    </div>
+    <section class="top-offers col-12">
+      <h2 class="title">TOP OFFERS!</h2>
 
-        <section class="offers">
+      <section class="offers">
 
-          <div class="row">
-            <div class="col-lg-4 col-md-12 mb-4">
-              <article class="card custom-card" style="max-height: 480px;">
-                <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
-                  <img src="../images/men/squared-coat.jpg" alt="squared-coat">
-                </div>
-                <div class="card__body">
-                  <h5>
-                    <span class="badge bg-success ms-2">Eco</span><span class="badge bg-danger ms-2">-10%</span>
-                  </h5>
-                  <h5 class="card-title mb-3">Orange Stripe's Squared Coat</h5>
-                  <p>Category</p>
-                  <h6 class="mb-3">
-                    <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
-                  </h6>
-                </div>
-              </article>
-            </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-12 mb-4">
+            <article class="card custom-card" style="max-height: 480px;">
+              <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
+                <img src="../images/men/squared-coat.jpg" alt="squared-coat">
+              </div>
+              <div class="card__body">
+                <h5>
+                  <span class="badge bg-success ms-2">Eco</span><span class="badge bg-danger ms-2">-10%</span>
+                </h5>
+                <h5 class="card-title mb-3">Orange Stripe's Squared Coat</h5>
+                <p>Category</p>
+                <h6 class="mb-3">
+                  <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
+                </h6>
+              </div>
+            </article>
+          </div>
 
-            <div class="col-lg-4 col-md-6 mb-4">
-              <article class="card custom-card" style="max-height: 480px;">
-                <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
-                  data-mdb-ripple-color="light">
-                  <img src="../images/women/faux-fur-scarf.jpg" alt="faux-fur-scarf">
-                </div>
-                <div class="card__body">
-                  <h5>
-                    <span class="badge bg-primary ms-2">New</span><span class="badge bg-success ms-2">Eco</span><span
-                      class="badge bg-danger ms-2">-10%</span>
-                  </h5>
-                  <h5 class="card-title mb-3">Faux Fur Scarf</h5>
-                  <p>Category</p>
-                  <h6 class="mb-3">$61.99</h6>
-                </div>
-              </article>
-            </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <article class="card custom-card" style="max-height: 480px;">
+              <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
+                data-mdb-ripple-color="light">
+                <img src="../images/women/faux-fur-scarf.jpg" alt="faux-fur-scarf">
+              </div>
+              <div class="card__body">
+                <h5>
+                  <span class="badge bg-primary ms-2">New</span><span class="badge bg-success ms-2">Eco</span><span
+                    class="badge bg-danger ms-2">-10%</span>
+                </h5>
+                <h5 class="card-title mb-3">Faux Fur Scarf</h5>
+                <p>Category</p>
+                <h6 class="mb-3">$61.99</h6>
+              </div>
+            </article>
+          </div>
 
-            <div class="col-lg-4 col-md-6 mb-4">
-              <article class="card custom-card" style="max-height: 480px;">
-                <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
-                  <img src="../images/men/squared-shirt.jpg" alt="squared-shirt">
-                </div>
-                <div class="card__body">
-                  <h5>
-                    <span class="badge bg-primary ms-2">New</span><span class="badge bg-success ms-2">Eco</span><span
-                      class="badge bg-danger ms-2">-10%</span>
-                  </h5>
-                  <h5 class="card-title mb-3">GG Marmont reversible belt</h5>
-                  <p>Category</p>
-                  <h6 class="mb-3">
-                    <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
-                  </h6>
-                </div>
-              </article>
-            </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <article class="card custom-card" style="max-height: 480px;">
+              <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
+                <img src="../images/men/squared-shirt.jpg" alt="squared-shirt">
+              </div>
+              <div class="card__body">
+                <h5>
+                  <span class="badge bg-primary ms-2">New</span><span class="badge bg-success ms-2">Eco</span><span
+                    class="badge bg-danger ms-2">-10%</span>
+                </h5>
+                <h5 class="card-title mb-3">GG Marmont reversible belt</h5>
+                <p>Category</p>
+                <h6 class="mb-3">
+                  <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
+                </h6>
+              </div>
+            </article>
+          </div>
+        </div>
+
+
+        <div class="row">
+          <div class="col-lg-4 col-md-12 mb-4">
+            <article class="card custom-card" style="max-height: 480px;">
+              <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
+                data-mdb-ripple-color="light">
+                <img src="../images/women/modern-jean.jpg" alt="modern-jean">
+              </div>
+              <div class="card__body">
+                <h5><span class="badge bg-primary ms-2">New</span></h5>
+                <h5 class="card-title mb-3">Jeans In Vintage Mid Blue</h5>
+                <p>Category</p>
+                <h6 class="mb-3">$61.99</h6>
+              </div>
+            </article>
           </div>
 
 
-          <div class="row">
-            <div class="col-lg-4 col-md-12 mb-4">
-              <article class="card custom-card" style="max-height: 480px;">
-                <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
-                  data-mdb-ripple-color="light">
-                  <img src="../images/women/modern-jean.jpg" alt="modern-jean">
-                </div>
-                <div class="card__body">
-                  <h5><span class="badge bg-primary ms-2">New</span></h5>
-                  <h5 class="card-title mb-3">Jeans In Vintage Mid Blue</h5>
-                  <p>Category</p>
-                  <h6 class="mb-3">$61.99</h6>
-                </div>
-              </article>
-            </div>
 
-
-
-            <div class="col-lg-4 col-md-6 mb-4">
-              <article class="card custom-card" style="max-height: 480px;">
-                <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
-                  data-mdb-ripple-color="light">
-                  <img src="../images/men/short-shirt.jpg" alt="short-shirt">
-                </div>
-                <div class="card__body">
-                  <h5><span class="badge bg-success ms-2">Eco</span></h5>
-                  <h5 class="card-title mb-3">Regular Fit Ellerslie Linen Shirt</h5>
-                  <p>Category</p>
-                  <h6 class="mb-3">$61.99</h6>
-                </div>
-              </article>
-            </div>
-
-            <div class="col-lg-4 col-md-6 mb-4">
-              <article class="card custom-card" style="max-height: 480px;">
-                <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
-                  <img src="../images/women/short.jpg" alt="short">
-                </div>
-                <div class="card__body">
-                  <h5><span class="badge bg-danger ms-2">-10%</span></h5>
-                  <h5 class="card-title mb-3">Waisted Smokin' Short Fray</h5>
-                  <p>Category</p>
-                  <h6 class="mb-3">
-                    <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
-                  </h6>
-                </div>
-              </article>
-            </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <article class="card custom-card" style="max-height: 480px;">
+              <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
+                data-mdb-ripple-color="light">
+                <img src="../images/men/short-shirt.jpg" alt="short-shirt">
+              </div>
+              <div class="card__body">
+                <h5><span class="badge bg-success ms-2">Eco</span></h5>
+                <h5 class="card-title mb-3">Regular Fit Ellerslie Linen Shirt</h5>
+                <p>Category</p>
+                <h6 class="mb-3">$61.99</h6>
+              </div>
+            </article>
           </div>
 
-        </section>
-
-        <section class="trending-brands">
-          <h3>TRENDING BRANDS</h3>
-          <article class="trending-brands__logos">
-            <ul>
-              <li><img src="./images/trending-brands/collusion.webp" alt="collusion"></li>
-              <li><img src="./images/trending-brands/monkl.webp" alt="monkl"></li>
-              <li><img src="./images/trending-brands/never-fully-dressed.png" alt="never-fully-dressed"></li>
-              <li><img src="./images/trending-brands/reclaimed-vintage.avif" alt="reclaimed-vintage"></li>
-              <li><img src="./images/trending-brands/topshop.png" alt="topshop"></li>
-              <li><img src="./images/trending-brands/weekday.webp" alt="weekday"></li>
-            </ul>
-          </article>
-        </section>
-
-
+          <div class="col-lg-4 col-md-6 mb-4">
+            <article class="card custom-card" style="max-height: 480px;">
+              <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
+                <img src="../images/women/short.jpg" alt="short">
+              </div>
+              <div class="card__body">
+                <h5><span class="badge bg-danger ms-2">-10%</span></h5>
+                <h5 class="card-title mb-3">Waisted Smokin' Short Fray</h5>
+                <p>Category</p>
+                <h6 class="mb-3">
+                  <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
+                </h6>
+              </div>
+            </article>
+          </div>
+        </div>
 
       </section>
+
+      <section class="trending-brands">
+        <h2>TRENDING BRANDS</h2>
+        <article class="trending-brands__logos">
+          <img src="./images/trending-brands/collusion.webp" alt="collusion">
+          <img src="./images/trending-brands/monkl.webp" alt="monkl">
+          <img src="./images/trending-brands/never-fully-dressed.png" alt="never-fully-dressed">
+          <img src="./images/trending-brands/reclaimed-vintage.avif" alt="reclaimed-vintage">
+          <img src="./images/trending-brands/topshop.png" alt="topshop">
+          <img src="./images/trending-brands/weekday.webp" alt="weekday">
+        </article>
+      </section>
+
+
+
+    </section>
     </div>
   </main>
   <footer class="footer">
     <div class="footer__info">
       <section class="methods">
         <article class="methods__payment">
-          <h3>Payment Methods</h3>
+          <p>Payment Methods</p>
           <img src="./images/visa.svg" alt="visa" style="width: 80px;">
           <img src="./images/mercado-pago.svg" alt="mercado-pago" style="width: 120px;">
         </article>
         <br>
         <article class="methods_shipping">
-          <h3>Shipping</h3>
-          <img src="./images/correo-argentino.png" alt="correo-argentino"  style="width: 110px;">
+          <p>Shipping</p>
+          <img src="./images/correo-argentino.png" alt="correo-argentino" style="width: 110px;">
         </article>
       </section>
       <section class="social">
-        <i class="bi bi-instagram social-item" style="font-size:30px"></i>
-        <i class="bi bi-facebook social-item" style="font-size:30px"></i>
+        <a href=""><i class="bi bi-instagram social-item"></i></a>
+        <a href=""><i class="bi bi-facebook social-item"></i></a>
       </section>
     </div>
     <section class="footer__copyright">
