--- a/pages/offers.html
+++ b/pages/offers.html
@@ -20,7 +20,7 @@
     <div class="header">
       <a class="logo" href="../index.html"><strong>CHEAPESTORE</strong></a>
       <input class="look-for" type="text" placeholder="Look for product, brand, category...">
-      <button>Login</button>
+      <button class="custom-btn">Login</button>
       <button>
         <i class="bi bi-cart" alt="shopping-cart-logo" height="12"></i>
       </button>
@@ -38,116 +38,12 @@
   <h1 class="clipped">Cheapestore</h1>
   <section class="banner"></section>
   <main class="container">
-    <h2 class="title">OFFERS</h2>
-    <!-- <div>
-      <section class="offers">
-
-          <article class="card">
-            <div class="card__picture">
-              <img src="../images/women/gardener-clothes.jpg" alt="offer-mockup-1">
-            </div>
-            <div class="card__product">
-              <h3 class="card__product-name">Vintage Blue Pocket Overall</h3>
-              <p class="card__product-price">$300</p>
-              <p class="card__product-fees">3 interest-free fees of $300</p>
-            </div>
-          </article>
-
-        <div class="cards_item">
-          <article class="card">
-            <div class="card__picture">
-              <img class="card__picture" src="../images/men/black&white-stripes.jpg" alt="offer-mockup-2">
-            </div>
-            <div class="card__product">
-              <h3 class="card__product-name">Black & White Stripes Shirt</h3>
-              <p class="card__product-price">$300</p>
-              <p class="card__product-fees">3 interest-free fees of $300</p>
-            </div>
-          </article>
-        </div>
-        <div class="cards_item">
-          <article class="card">
-            <div class="card__picture">
-              <img class="card__picture" src="../images/women/jean.jpg" alt="offer-mockup-3">
-            </div>
-            <div class="card__product">
-              <h3 class="card__product-name">Jeans In Mid Blue With Rips</h3>
-              <p class="card__product-price">$300</p>
-              <p class="card__product-fees">3 interest-free fees of $300</p>
-            </div>
-          </article>
-        </div>
-        <div class="cards_item">
-          <article class="card">
-            <div class="card__picture">
-              <img class="card__picture" src="../images/men/black-shoes.jpg" alt="offer-mockup-4">
-            </div>
-            <div class="card__product">
-              <h3 class="card__product-name">Black Leather's Classic Chelsea Boot</h3>
-              <p class="card__product-price">$300</p>
-              <p class="card__product-fees">3 interest-free fees of $300</p>
-            </div>
-          </article>
-        </div>
-        <div class="cards_item">
-          <article class="card">
-            <div class="card__picture">
-              <img class="card__picture" src="../images/women/knotted-shirt.jpg" alt="offer-mockup-5">
-            </div>
-            <div class="card__product">
-              <h3 class="card__product-name">Striped Print T-Shirt</h3>
-              <p class="card__product-price">$300</p>
-              <p class="card__product-fees">3 interest-free fees of $300</p>
-            </div>
-          </article>
-        </div>
-        <article class="card">
-          <img class="card__picture" src="../images/men/brooklyn-jacket.jpg" alt="offer-mockup-6">
-          <h3 class="card__product-name">Classic Brooklyn Red Jacket</h3>
-          <p class="card__product-price">$300</p>
-          <p class="card__product-fees">3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/women/modern-jean.jpg" alt="offer-mockup-7">
-          <h3 class="card__product-name">Jeans In Vintage Mid Blue</h3>
-          <p class="card__product-price">$300</p>
-          <p class="card__product-fees">3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/men/short-shirt.jpg" alt="offer-mockup-8">
-          <h3 class="card__product-name">Regular Fit Ellerslie Linen Shirt</h3>
-          <p class="card__product-price">$300</p>
-          <p class="card__product-fees">3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/women/short.jpg" alt="offer-mockup-9">
-          <h3 class="card__product-name">Waisted Smokin' Short Fray</h3>
-          <p class="card__product-price">$300</p>
-          <p class="card__product-fees">3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/men/squared-coat.jpg" alt="offer-mockup-10">
-          <h3 class="card__product-name">Orange Stripe's Squared Coat</h3>
-          <p class="card__product-price">$300</p>
-          <p class="card__product-fees">3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/women/faux-fur-scarf.jpg" alt="offer-mockup-11">
-          <h3 class="card__product-name">Faux Fur Scarf</h3>
-          <p class="card__product-price">$300</p>
-          <p class="card__product-fees">3 interest-free fees of $300</p>
-        </article>
-        <article class="card">
-          <img class="card__picture" src="../images/men/squared-shirt.jpg" alt="offer-mockup-12">
-          <h3 class="card__product-name">GG Marmont reversible belt</h3>
-          <p class="card__product-price">$300</p>
-          <p class="card__product-fees">3 interest-free fees of $300</p>
-        </article>
-      </section>
-    </div> -->
-
-
-
+    <section class="legend">
+      <h2 class="title">BESTSELLERS FROM $9.99</h2>
+      <h3>Refresh your <strong>daily rotation</strong> with our women's clothing range.</h3>
+      <p>With the freshest styles available all in one place, you can expect everyday basics, like <strong>women's tops and skirts</strong>, as well as must-have <strong>knitwear and cozy loungewear</strong> for downtime days.</p>  
+      <h3>Plans to go out?</h3><p>Our women's dresses line up mini, midi and maxi styles that were made for <strong>summer evenings</strong>, while our stylish jeans and pants offer something to flatter</p>
+    </section>
     <section class="offers">
       <div class="row">
         <div class="col-lg-4 col-md-12 mb-4">
@@ -253,6 +149,13 @@
           </article>
         </div>
       </div>
+
+      <section class="legend">
+        <h3>Discover our <strong>Sales & Offers</strong> across all departments</h3><p>From men' <strong>shoes</strong> to women's <strong>coats</strong>.</p> 
+        <h3>Discover what <strong>savings</strong> you can make!</h3><p>There's never been a better time to step out in style thanks to our <strong>clothing sale</strong>.</p> 
+        <p>Our clothing sale includes <strong>2022's biggest trends for women & men</strong>.</p>
+      </section>
+
 
       <div class="row">
         <div class="col-lg-4 col-md-12 mb-4">
