--- a/pages/women.html
+++ b/pages/women.html
@@ -22,7 +22,7 @@
     <div class="header">
       <a class="logo" href="../index.html"><strong>CHEAPESTORE</strong></a>
       <input class="look-for" type="text" placeholder="Look for product, brand, category...">
-      <button>Login</button>
+      <button class="custom-btn">Login</button>
       <button>
         <i class="bi bi-cart" alt="shopping-cart-logo" height="12"></i>
       </button>
